--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
 # Node.js
 node_modules/
-
-# Production
-.env
-
-# Build artifacts
 dist/
 build/
+.env
+.env.local
+.env.*.local
 
-# IDE
-.idea/
-.vscode/
-
-# System Files
-.DS_Store
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 *.log
 
-# Tauri
-tauri.conf.json
+# Dependencies
+package-lock.json
+pnpm-lock.yaml
 
-# Tailwind CSS
-.tailwindcss
+# Tauri
+target/
+src-tauri/target/
+src-tauri/Cargo.lock
+src-tauri/.env
+
+# VS Code
+.vscode/
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# Temp files
+*.tmp
+*.bak
+*~
